# Harvester-Prime

./: .gitignore  README.md  config_normalizer.py  form_gui.py  phone_window.py  pyproject.toml  system_info_collector.py  usb_filter_window.py  usb_window.py
configs/: base.example.yaml  base.yaml  device_type_rules.yml  local.example.yml  schemas.yml
data/interim/: pending.example.csv  verified.example.csv
data/raw/dhcp/: data.example.csv
data/raw/mkp/: data.example.csv
data/raw/validation/: data.example.csv
data/result/: report1.csv
scripts/: process.py  report1.py
src/app/classifiers/: device_type.py
src/app/collectors/: files.py
src/app/processors/: __init__.py  normalize.py  report1.py
validation/: data.example.csv
