[project]
name = "harvester-prime"
version = "0.1.0"
description = "Utilities for processing DHCP log files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "pandas>=1.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

